--- a/index.html
+++ b/index.html
@@ -3,143 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOVEREIGN SYMPTOMS // LAVISH SYSTEMS</title>
-    <meta name="description" content="Lavish Systems, Luxury Solutions. The inevitable output of Sovereign Symptoms by Indigo Holliday.">
+    <title>SOVEREIGN SYMPTOMS // THE NEURAL ARCHITECT</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Roboto+Mono:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;900&family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <style>
-        :root { --blood-red: #ff0055; --glitch-black: #050505; }
-        body { background-color: var(--glitch-black); color: #d1d1d1; font-family: 'Roboto Mono', monospace; overflow-x: hidden; }
-        .font-display { font-family: 'Orbitron', sans-serif; }
-        .border-blood { border: 1px solid var(--blood-red); }
-        .text-blood { color: var(--blood-red); }
-        .glitch-hover:hover { text-shadow: 2px 0 #fff, -2px 0 var(--blood-red); cursor: crosshair; }
-        .scanline { width: 100%; height: 2px; background: rgba(255, 0, 85, 0.1); position: fixed; top: 0; left: 0; pointer-events: none; animation: scan 4s linear infinite; z-index: 50; }
-        @keyframes scan { 0% { top: 0; } 100% { top: 100%; } }
-        .project-card { transition: all 0.4s ease; border: 1px solid rgba(255, 0, 85, 0.2); background: rgba(15, 15, 15, 0.6); }
-        .project-card:hover { border-color: var(--blood-red); background: rgba(255, 0, 85, 0.05); transform: translateY(-2px); }
-        ::-webkit-scrollbar { width: 3px; }
-        ::-webkit-scrollbar-thumb { background: var(--blood-red); }
+        :root { --obsidian: #050505; --gold: #c5a059; --platinum: #e5e5e5; }
+        body { background-color: var(--obsidian); color: var(--platinum); font-family: 'Montserrat', sans-serif; letter-spacing: 0.1em; }
+        .font-luxury { font-family: 'Cinzel', serif; }
+        .border-gold { border: 1px solid rgba(197, 160, 89, 0.3); }
+        .bg-glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); }
+        .gold-glow:hover { box-shadow: 0 0 20px rgba(197, 160, 89, 0.2); border-color: var(--gold); }
+        .text-gold { color: var(--gold); }
     </style>
 </head>
-<body class="p-4 md:p-10 lg:p-20">
-    <div class="scanline"></div>
-
-    <header class="max-w-7xl mx-auto mb-16 border-b border-blood pb-8">
-        <h1 class="text-4xl md:text-7xl font-display font-black text-white uppercase tracking-tighter glitch-hover">
-            LET THERE BE Ls
-        </h1>
-        <div class="flex flex-col md:flex-row justify-between items-start md:items-end mt-4">
-            <div>
-                <p class="text-blood font-bold uppercase tracking-widest text-xs">SOVEREIGN SYMPTOMS</p>
-                <p class="text-white/60 text-[10px] uppercase mt-1">Lavish Systems // Luxury Solutions</p>
-            </div>
-            <div class="mt-4 md:mt-0 text-right">
-                <p class="text-[10px] uppercase font-bold text-white tracking-widest">INDIGO HOLLIDAY // ARCHITECT</p>
-                <p class="text-[9px] text-blood uppercase tracking-[0.3em]">THE INEVITABLE PROTOCOL // 2026</p>
-            </div>
+<body class="p-6 md:p-20">
+    <header class="max-w-7xl mx-auto mb-32 text-center">
+        <h1 class="font-luxury text-5xl md:text-8xl font-black mb-4 tracking-tighter uppercase">Let There Be</h1>
+        <p class="text-gold tracking-[0.5em] uppercase text-xs mb-10">The Declaration of Sovereignty</p>
+        <div class="max-w-2xl mx-auto border-gold p-8 bg-glass">
+            <p class="text-[10px] uppercase leading-loose text-white/60">
+                Sovereign Symptoms is the inevitable delivery system for Lavish Systems. When you declare yourself, we architect the luxury.
+            </p>
         </div>
     </header>
 
-    <section class="max-w-7xl mx-auto mb-24 px-4">
-        <h2 class="font-display text-white text-xl uppercase mb-10 tracking-widest flex items-center gap-4">
-            <span class="text-blood">00</span> Operational Territories
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-            <div class="project-card p-6">
-                <h3 class="font-display text-white text-xs uppercase mb-2 tracking-widest">thetrophyhoe.com</h3>
-                <p class="text-[10px] text-white/60 uppercase mb-4">Identity Hub // Narrative Infrastructure</p>
-                <div class="aspect-video bg-zinc-900 border border-blood/20 flex items-center justify-center mb-4">
-                    <p class="text-[9px] text-blood animate-pulse uppercase tracking-widest">System Active: 200 OK</p>
-                </div>
-                <a href="https://thetrophyhoe.com" target="_blank" class="text-[9px] border border-blood px-4 py-2 hover:bg-blood transition-all uppercase">Enter Territory</a>
+    <section class="max-w-7xl mx-auto mb-32">
+        <h2 class="font-luxury text-white text-2xl uppercase mb-12 border-b border-gold pb-4">00 // Visual Synthesis</h2>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+            <div class="border-gold aspect-video bg-black relative overflow-hidden shadow-2xl">
+                <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/AXZurpsxXyE" frameborder="0" allowfullscreen></iframe>
             </div>
-            <div class="project-card p-6">
-                <h3 class="font-display text-white text-xs uppercase mb-2 tracking-widest">glitchrecords.com</h3>
-<p class="text-[10px] text-white/60 uppercase mb-4">E-Commerce Architecture // Distribution</p>
-                <div class="aspect-video bg-zinc-900 border border-blood/20 flex items-center justify-center mb-4">
-                    <p class="text-[9px] text-blood animate-pulse uppercase tracking-widest">System Active: 200 OK</p>
-                </div>
-                <a href="https://glitchrecords.com" target="_blank" class="text-[9px] border border-blood px-4 py-2 hover:bg-blood transition-all uppercase">Enter Territory</a>
+            <div class="space-y-6">
+                <h3 class="font-luxury text-gold text-xl">CruciFLEX</h3>
+                <p class="text-xs text-white/60 leading-relaxed uppercase">
+                    High-fidelity cinematic construction for the Godhood encoded. This is not a video; it is a visual protocol for the sovereign identity.
+                </p>
             </div>
         </div>
     </section>
 
-    <section class="max-w-7xl mx-auto mb-24 px-4">
-        <h2 class="font-display text-white text-xl uppercase mb-10 tracking-widest flex items-center gap-4">
-            <span class="text-blood">01</span> Proof of Concept
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <div class="project-card flex flex-col">
-                <div class="aspect-video bg-black relative border-b border-blood/20">
-                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/lhIZqPdQOwo" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="p-6">
-                    <h3 class="font-display text-white text-[10px] uppercase mb-2">Narrative Architecture</h3>
-                    <p class="text-[10px] text-white/40 uppercase">VIGILANTE // Multi-platform lore builds.</p>
-                </div>
+    <section class="max-w-7xl mx-auto mb-32">
+        <h2 class="font-luxury text-white text-2xl uppercase mb-12 border-b border-gold pb-4">01 // The Master Menu</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="border-gold p-8 bg-glass gold-glow">
+                <h3 class="text-gold font-luxury mb-6 text-sm">Web Architecture</h3>
+                <ul class="text-[10px] space-y-4 uppercase">
+                    <li class="flex justify-between"><span>The Vanity Terminal</span> <span>$2.5K</span></li>
+                    <li class="flex justify-between font-bold text-white"><span>GOD MODE</span> <span>$15K+</span></li>
+                </ul>
             </div>
-            <div class="project-card flex flex-col">
-                <div class="aspect-video bg-black relative border-b border-blood/20">
-                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/AXZurpsxXyE" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="p-6">
-                    <h3 class="font-display text-white text-[10px] uppercase mb-2">Visual Synthesis</h3>
-                    <p class="text-[10px] text-white/40 uppercase">CRUCIFLEX // High-compute cinematic construction.</p>
-                </div>
+            <div class="border-gold p-8 bg-glass gold-glow">
+                <h3 class="text-gold font-luxury mb-6 text-sm">Sonic Weaponry</h3>
+                <ul class="text-[10px] space-y-4 uppercase">
+                    <li class="flex justify-between"><span>The Topline</span> <span>$800</span></li>
+                    <li class="flex justify-between"><span>Ghost Protocol</span> <span>$5K+</span></li>
+                </ul>
             </div>
-            <div class="project-card flex flex-col">
-                <div class="aspect-video bg-black relative border-b border-blood/20">
-                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/mnYIsO-iQ-c" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="p-6">
-                    <h3 class="font-display text-white text-[10px] uppercase mb-2">Generative Assets</h3>
-                    <p class="text-[10px] text-white/40 uppercase">PROJECT JANNETTE // High-engagement loops.</p>
-                </div>
+            <div class="border-gold p-8 bg-glass gold-glow text-center flex flex-col justify-center">
+                <p class="text-xs text-white uppercase font-bold mb-2">Initialize Protocol</p>
+                <a href="mailto:stayglitched@glitchedrecords.com" class="text-gold text-[10px] uppercase border border-gold py-2 px-4 hover:bg-gold hover:text-black transition-all">Direct Uplink</a>
             </div>
         </div>
     </section>
 
-    <section class="max-w-7xl mx-auto mb-24 px-4">
-        <h2 class="font-display text-white text-xl uppercase mb-10 tracking-widest flex items-center gap-4">
-            <span class="text-blood">02</span> Master Service Menu
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div class="border-blood p-6 bg-zinc-900/30">
-                <h3 class="font-display text-white text-[10px] border-b border-white/10 pb-2 mb-4 uppercase">Web Architecture</h3>
-                <ul class="text-[11px] space-y-2 uppercase">
-                    <li>Terminal Soul <span class="text-blood">$15K+</span></li>
-                    <li>Command Center <span class="text-blood">$5K+</span></li>
-                </ul>
-            </div>
-            <div class="border-blood p-6 bg-zinc-900/30">
-                <h3 class="font-display text-white text-[10px] border-b border-white/10 pb-2 mb-4 uppercase">Neural Upgrades</h3>
-                <ul class="text-[11px] space-y-2 uppercase">
-<li>Custom Agents <span class="text-blood">$1K+</span></li>
-                    <li>Consulting <span class="text-blood">$350/hr</span></li>
-                </ul>
-            </div>
-            <div class="border-blood p-6 bg-zinc-900/30">
-                <h3 class="font-display text-white text-[10px] border-b border-white/10 pb-2 mb-4 uppercase">Identity Protocols</h3>
-                <ul class="text-[11px] space-y-2 uppercase">
-                    <li>Glitch Mark <span class="text-blood">$500+</span></li>
-                    <li>Full Hallucination <span class="text-blood">$1.2K+</span></li>
-                </ul>
-            </div>
-            <div class="border-blood p-6 bg-zinc-900/30 text-center flex flex-col justify-center">
-                <p class="text-[10px] text-white font-bold mb-2">NETWORK STATUS</p>
-                <p class="text-[9px] text-blood animate-pulse uppercase tracking-widest">RBHFLM // Authentication Pending</p>
-            </div>
-        </div>
-    </section>
-
-    <footer class="max-w-7xl mx-auto text-center border-t border-blood/20 pt-16 pb-10">
-        <a href="mailto:stayglitched@glitchedrecords.com" class="inline-block border-blood px-12 py-5 font-display text-xs text-white hover:bg-blood transition-all uppercase tracking-[0.4em]">Initialize Connection</a>
-        <div class="mt-12 space-y-2 text-[9px] text-white/40 uppercase tracking-widest">
-            <p>"Luxury is a symptom of sovereignty."</p>
-            <p>Sovereign Symptoms // 432 Edgehill Ln, Oceanside, CA</p>
-            <p class="text-blood font-bold tracking-[0.3em]">LAVISH SYSTEMS // LUXURY SOLUTIONS // 2026</p>
-        </div>
+    <footer class="text-center pt-20 border-t border-gold/10">
+        <p class="text-[9px] uppercase tracking-[0.8em] text-white/30">Luxury is a symptom of sovereignty // Indigo Holliday</p>
     </footer>
 </body>
 </html>
