--- a/index.html
+++ b/index.html
@@ -3,71 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOVEREIGN SYMPTOMS // THE NEURAL ARCHITECT</title>
+    <title>SOVEREIGN SYMPTOMS // GODHOOD ENCODED</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;900&family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;900&family=Montserrat:wght@100;300;700&display=swap" rel="stylesheet">
     <style>
         :root { --obsidian: #050505; --gold: #c5a059; --platinum: #e5e5e5; }
-        body { background-color: var(--obsidian); color: var(--platinum); font-family: 'Montserrat', sans-serif; letter-spacing: 0.1em; }
+        body { background-color: var(--obsidian); color: var(--platinum); font-family: 'Montserrat', sans-serif; letter-spacing: 0.15em; line-height: 1.6; }
         .font-luxury { font-family: 'Cinzel', serif; }
-        .border-gold { border: 1px solid rgba(197, 160, 89, 0.3); }
-        .bg-glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); }
-        .gold-glow:hover { box-shadow: 0 0 20px rgba(197, 160, 89, 0.2); border-color: var(--gold); }
+        .border-gold { border: 1px solid rgba(197, 160, 89, 0.2); }
+        .bg-obsidian-glass { background: rgba(5, 5, 5, 0.9); backdrop-filter: blur(20px); border: 1px solid rgba(197, 160, 89, 0.1); }
         .text-gold { color: var(--gold); }
+        .transition-god { transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1); }
+        .transition-god:hover { border-color: var(--gold); box-shadow: 0 0 40px rgba(197, 160, 89, 0.15); }
     </style>
 </head>
-<body class="p-6 md:p-20">
-    <header class="max-w-7xl mx-auto mb-32 text-center">
-        <h1 class="font-luxury text-5xl md:text-8xl font-black mb-4 tracking-tighter uppercase">Let There Be</h1>
-        <p class="text-gold tracking-[0.5em] uppercase text-xs mb-10">The Declaration of Sovereignty</p>
-        <div class="max-w-2xl mx-auto border-gold p-8 bg-glass">
-            <p class="text-[10px] uppercase leading-loose text-white/60">
-                Sovereign Symptoms is the inevitable delivery system for Lavish Systems. When you declare yourself, we architect the luxury.
+<body class="p-6 md:p-16 lg:p-24">
+
+    <header class="max-w-7xl mx-auto mb-40 text-center">
+        <h1 class="font-luxury text-5xl md:text-8xl font-black mb-6 tracking-tighter uppercase text-white">Let There Be Me</h1>
+        <p class="text-gold tracking-[1em] uppercase text-[10px] mb-12">The Declaration of Sovereignty</p>
+        <div class="max-w-4xl mx-auto border-gold p-16 bg-obsidian-glass shadow-2xl">
+            <p class="text-[11px] uppercase leading-loose text-white/70 italic max-w-2xl mx-auto">
+                "Sovereign Symptoms is the inevitable diagnostic of the self. Lavish Systems are the opulent output of your godhood encoded."
             </p>
         </div>
     </header>
 
-    <section class="max-w-7xl mx-auto mb-32">
-        <h2 class="font-luxury text-white text-2xl uppercase mb-12 border-b border-gold pb-4">00 // Visual Synthesis</h2>
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-            <div class="border-gold aspect-video bg-black relative overflow-hidden shadow-2xl">
-                <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/AXZurpsxXyE" frameborder="0" allowfullscreen></iframe>
+    <section class="max-w-7xl mx-auto mb-40">
+        <h2 class="font-luxury text-white text-xl uppercase mb-16 tracking-[0.4em] border-b border-gold pb-6">00 // Active Territories</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+            <div class="border-gold p-8 bg-obsidian-glass transition-god">
+                <h3 class="font-luxury text-gold text-sm uppercase mb-2 tracking-widest">thetrophyhoe.com</h3>
+                <p class="text-[10px] text-white/40 uppercase mb-6 tracking-widest">Identity Hub // Narrative Infrastructure</p>
+                <div class="aspect-video bg-black flex items-center justify-center border border-gold/10 mb-6">
+                    <p class="text-[9px] text-gold animate-pulse tracking-[0.4em] uppercase">Status: 200 OK // Sovereign</p>
+                </div>
+                <a href="https://thetrophyhoe.com" target="_blank" class="inline-block border border-gold px-8 py-3 text-[9px] text-gold uppercase tracking-[0.3em] hover:bg-gold hover:text-black">Enter Territory</a>
             </div>
-            <div class="space-y-6">
-                <h3 class="font-luxury text-gold text-xl">CruciFLEX</h3>
-                <p class="text-xs text-white/60 leading-relaxed uppercase">
-                    High-fidelity cinematic construction for the Godhood encoded. This is not a video; it is a visual protocol for the sovereign identity.
-                </p>
-            </div>
-        </div>
-    </section>
-
-    <section class="max-w-7xl mx-auto mb-32">
-        <h2 class="font-luxury text-white text-2xl uppercase mb-12 border-b border-gold pb-4">01 // The Master Menu</h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div class="border-gold p-8 bg-glass gold-glow">
-                <h3 class="text-gold font-luxury mb-6 text-sm">Web Architecture</h3>
-                <ul class="text-[10px] space-y-4 uppercase">
-                    <li class="flex justify-between"><span>The Vanity Terminal</span> <span>$2.5K</span></li>
-                    <li class="flex justify-between font-bold text-white"><span>GOD MODE</span> <span>$15K+</span></li>
-                </ul>
-            </div>
-            <div class="border-gold p-8 bg-glass gold-glow">
-                <h3 class="text-gold font-luxury mb-6 text-sm">Sonic Weaponry</h3>
-                <ul class="text-[10px] space-y-4 uppercase">
-                    <li class="flex justify-between"><span>The Topline</span> <span>$800</span></li>
-                    <li class="flex justify-between"><span>Ghost Protocol</span> <span>$5K+</span></li>
-                </ul>
-            </div>
-            <div class="border-gold p-8 bg-glass gold-glow text-center flex flex-col justify-center">
-                <p class="text-xs text-white uppercase font-bold mb-2">Initialize Protocol</p>
-                <a href="mailto:stayglitched@glitchedrecords.com" class="text-gold text-[10px] uppercase border border-gold py-2 px-4 hover:bg-gold hover:text-black transition-all">Direct Uplink</a>
+            <div class="border-gold p-8 bg-obsidian-glass transition-god">
+                <h3 class="font-luxury text-gold text-sm uppercase mb-2 tracking-widest">glitchrecords.com</h3>
+                <p class="text-[10px] text-white/40 uppercase mb-6 tracking-widest">E-Commerce // Neural Distribution</p>
+                <div class="aspect-video bg-black flex items-center justify-center border border-gold/10 mb-6">
+                    <p class="text-[9px] text-gold animate-pulse tracking-[0.4em] uppercase">Status: 200 OK // Active</p>
+                </div>
+                <a href="https://glitchrecords.com" target="_blank" class="inline-block border border-gold px-8 py-3 text-[9px] text-gold uppercase tracking-[0.3em] hover:bg-gold hover:text-black">Enter Territory</a>
             </div>
         </div>
     </section>
 
-    <footer class="text-center pt-20 border-t border-gold/10">
-        <p class="text-[9px] uppercase tracking-[0.8em] text-white/30">Luxury is a symptom of sovereignty // Indigo Holliday</p>
+    <section class="max-w-7xl mx-auto mb-40">
+        <h2 class="font-luxury text-white text-xl uppercase mb-16 tracking-[0.4em] border-b border-gold pb-6">01 // Visual Synthesis</h2>
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+            <div class="border-gold bg-obsidian-glass overflow-hidden flex flex-col">
+                <div class="aspect-video bg-black relative">
+                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/lhIZqPdQOwo" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="p-8">
+                    <p class="text-gold font-luxury text-[10px] mb-2 uppercase">VIGILANTE</p>
+                    <p class="text-[10px] text-white/40 uppercase">Narrative Architecture // EPK Protocol</p>
+                </div>
+            </div>
+            <div class="border-gold bg-obsidian-glass overflow-hidden flex flex-col">
+                <div class="aspect-video bg-black relative">
+                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/F7PIxg_JhaY" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="p-8">
+                    <p class="text-gold font-luxury text-[10px] mb-2 uppercase">CRUCIFLEX</p>
+                    <p class="text-[10px] text-white/40 uppercase">Visual Synthesis // Cinematic Build</p>
+                </div>
+            </div>
+            <div class="border-gold bg-obsidian-glass overflow-hidden flex flex-col">
+                <div class="aspect-video bg-black relative">
+                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/mnYIsO-iQ-c" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="p-8">
+                    <p class="text-gold font-luxury text-[10px] mb-2 uppercase">PROJECT JANNETTE</p>
+                    <p class="text-[10px] text-white/40 uppercase">Generative Assets // Short-Form Hype</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="max-w-7xl mx-auto mb-40">
+        <h2 class="font-luxury text-white text-xl uppercase mb-16 tracking-[0.4em] border-b border-gold pb-6">02 // The Master Service Menu</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="border-gold p-8 bg-obsidian-glass">
+                <h3 class="font-luxury text-gold text-[11px] mb-8 uppercase border-b border-gold/10 pb-4">Web Arch</h3>
+                <ul class="text-[9px] space-y-4 uppercase text-white/60">
+                    <li class="flex justify-between"><span>Vanity Terminal</span> <span>$2.5K</span></li>
+                    <li class="flex justify-between"><span>Command Center</span> <span>$8K</span></li>
+                    <li class="flex justify-between text-white font-bold pt-4"><span>GOD MODE</span> <span>$15K+</span></li>
+                </ul>
+            </div>
+            <div class="border-gold p-8 bg-obsidian-glass">
+                <h3 class="font-luxury text-gold text-[11px] mb-8 uppercase border-b border-gold/10 pb-4">Sonic Weaponry</h3>
+                <ul class="text-[9px] space-y-4 uppercase text-white/60">
+                    <li class="flex justify-between"><span>Composition</span> <span>$2.5K</span></li>
+                    <li class="flex justify-between"><span>Vocal Protocol</span> <span>$800</span></li>
+                    <li class="flex justify-between text-white font-bold pt-4"><span>Ghost protocol</span> <span>$5K+</span></li>
+                </ul>
+            </div>
+            <div class="border-gold p-8 bg-obsidian-glass">
+                <h3 class="font-luxury text-gold text-[11px] mb-8 uppercase border-b border-gold/10 pb-4">Identity</h3>
+                <ul class="text-[9px] space-y-4 uppercase text-white/60">
+                    <li class="flex justify-between"><span>Full Hallucination</span> <span>$1.8K</span></li>
+                    <li class="flex justify-between"><span>The Dossier</span> <span>$900</span></li>
+                    <li class="flex justify-between text-white font-bold pt-4"><span>Show Bible</span> <span>$2.5K</span></li>
+                </ul>
+            </div>
+            <div class="border-gold p-8 bg-obsidian-glass text-center flex flex-col justify-center">
+                <p class="text-[10px] text-white uppercase font-bold mb-4 tracking-widest">Connection</p>
+                <a href="mailto:stayglitched@glitchedrecords.com" class="text-gold border border-gold py-4 text-[9px] uppercase tracking-widest hover:bg-gold hover:text-black">Initialize</a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="max-w-7xl mx-auto text-center border-t border-gold/10 pt-32 pb-20">
+        <p class="text-[10px] uppercase tracking-[0.8em] text-white/20 mb-8">Luxury is a symptom of sovereignty</p>
+        <p class="text-[9px] uppercase tracking-[0.2em] text-gold/60">Indigo Holliday // Sovereign Symptoms // Oceanside, CA</p>
+        <p class="text-[9px] uppercase tracking-[0.4em] text-white/30 mt-4">Lavish Systems // Luxury Solutions // 2026</p>
     </footer>
+
 </body>
 </html>
